--- a/multi-panel-page/styles.css
+++ b/multi-panel-page/styles.css
@@ -74,7 +74,7 @@ header {
     vertical-align: middle;
     text-align: center;
     margin: 0;
-    background-image: url("media/bg_img.jpg");
+    background-image: url("media/bg_img.JPG");
     background-size: 200px, auto, contain;
     /* opacity: 50%; */
     padding-bottom: 50px;
