--- a/microsite/final/styles.css
+++ b/microsite/final/styles.css
@@ -75,7 +75,7 @@ p  #footer {
     vertical-align: middle;
 }
 a {
-    color: white;
+    color: #ead8be;
 }
 
 html, body {
@@ -116,7 +116,7 @@ h2 {
 }
 
 #title-alt {
-    color: white;
+    color: #ead8be;
     font-size: 2vw;
 }
 
@@ -134,4 +134,36 @@ h2 {
 
 a {
     text-decoration: none;
+}
+
+@media(max-width: 720px) {
+    #title {
+        padding-top: 10px;
+        font-size: 15vw;
+    }
+    #hume {
+        height: 50vw;
+    }
+    p {
+        font-size: 15px;
+    }
+    #footer {
+        height: auto;
+    }
+    #h-menu-ctr {
+        visibility: hidden;
+        width: 0;
+    }
+    h2 {
+        font-size: 25px;
+        margin: 0 20px;
+    }
+    #subtitle {
+        font-size: 50px;
+        padding: 0;
+    }
+    #title-alt {
+        font-size: 40px;
+        width: fit-content;
+    }
 }
